# rails-conductor

./: .gitignore  AGENTS.md  Dockerfile  Gemfile  LICENSE  README.md  caddy_ops_ui_architecture.md
.github/workflows/: ci.yml  deploy.yml
.kamal/: secrets
app/channels/: conversation_channel.rb  database_pull_channel.rb  deploy_channel.rb  script_run_channel.rb
app/controllers/: application_controller.rb  apps_controller.rb  backups_controller.rb  conversations_controller.rb  credentials_controller.rb  cron_jobs_controller.rb  dashboard_controller.rb  database_clusters_controller.rb  database_pulls_controller.rb  databases_controller.rb  deployments_controller.rb  env_variables_controller.rb  guides_controller.rb  integrations_controller.rb  invitations_controller.rb  landing_controller.rb  mcp_tokens_controller.rb  members_controller.rb  messages_controller.rb  onboarding_controller.rb  organizations_controller.rb  script_runs_controller.rb  scripts_controller.rb  servers_controller.rb  ssh_keys_controller.rb  users_controller.rb  version_controller.rb  webhooks_controller.rb
conductor-cli/: Cargo.toml
conductor-cli/src/: auth.rs  client.rs  config.rs  main.rs  output.rs
conductor-cli/src/commands/: apps.rs  backups.rs  mod.rs  scripts.rs  servers.rs  status.rs
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  puma.rb  recurring.yml  routes.rb  storage.yml
db/: schema.rb  seeds.rb
docs/: INDEX.md  PILLARS.md  README.md  STATUS.md  USAGE.md  VISION.md
lib/: result.rb
public/: robots.txt
test/: test_helper.rb
(+454 files in other folders)
