[package]
name = "conductor-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Conductor infrastructure management"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
toml = "0.8"
anyhow = "1"
